--- a/steganography-frontend/src/app/pages/home/home.component.css
+++ b/steganography-frontend/src/app/pages/home/home.component.css
@@ -5,6 +5,15 @@
     flex-direction: row;
 }
 
+.home-right-container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary-color);
+}
+
 .home-container {
     background: var(--primary-color);
     width: 70vw;
@@ -13,13 +22,32 @@
     justify-content: center;
 }
 
+h1{
+    font-family: var(--Font);
+    color: var(--secondary-color);
+    font-style: normal;
+    font-weight: 300;
+    padding: 0 0 0 10px;
+    margin: 20px 0 0 0;
+}
 .home-box1, .home-box2
 {
     border-radius: 15px;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    height: 30vh;
     width: 25vw;
     background: #DED9D9;
     margin: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
+.button {
+    border: 0px;
+    height: 30px;
+    border-radius: 10px;
+    background: var(--secondary-color);
+    color: #ffffff;
+    margin: 10px 0 10px 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
